samples/_failures_safe/1761638906_e3797f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_bc8fa928.c: In function ‘main’:
./samples/SAFE/__tmp_bc8fa928.c:153:12: error: expected declaration or statement at end of input
  153 |     struct CompressionContext ctx;
      |            ^~~~~~~~~~~~~~~~~~
